# ei2-project-AlexJew

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  chronograf-v1.db  config.toml  pyproject.toml
analysis/: energy_prediction.py  model_evaluation.py
backup/: chronograf-v1.db.1.8.0
claude/: session-context.md
notebooks/: energy_prediction.py  polars-tutorial.py
plans/: config-centralization.md  model_extraction_plan.md
scripts/: kaggle_requirements.txt  prepare_data.py  train_lgbm_baseline.py  train_lgbm_tuned.py  train_ridge.py  tune_lgbm.py
utils/: config.py  data_acquisition.py  data_processing.py  download_meteoswiss.py  download_meteoswiss_serving.py  download_meteoswiss_training.py  feature_engineering.py  metrics.py  model_preparation.py
