[project]
name = "energy-informatics-ii"
version = "0.1.0"
description = "Energy Infromatics II"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "certifi>=2025.10.5",
  "influxdb-client>=1.49.0",
  "marimo>=0.19.11",
  "pandas>=3.0.0",
  "polars>=1.29.0",
  "pre-commit>=4.2.0",
  "python-dotenv>=1.1.1",
  "pyarrow>=23.0.0",
  "pyright>=1.1.400",
  "pyzmq>=27.1.0",
  "ruff>=0.11.10",
  "holidays>=0.92",
  "dotenv>=0.9.9",
  "altair>=6.0.0",
  "scikit-learn>=1.6.0",
  "lightgbm>=4.5.0",
  "numpy>=2.4.2",
  "matplotlib>=3.10.8",
  "seaborn>=0.13.2",
  "statsmodels>=0.14.6",
  "pmdarima>=2.1.1",
  "tensorflow>=2.21.0",
  "vegafusion>=2.0.3",
  "pvlib>=0.11.0",
  "optuna>=4.8.0",
  "tomlkit>=0.14.0",
]

# Set curent project as a package, with src/ folder.
[tool.uv]
package = true

[tool.pyright]
venvPath = "."
venv = ".venv"

# Longer than standard 79 char max line length.
[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = [
  "E501", # enforce the line-too-long rule
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

# Docstring style numpy (instead of Google).
[tool.ruff.lint.pydocstyle]
convention = "numpy"

# Set ruff as only a local deps for development.
[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
]
